Fix caption spacing

--- a/src/components/Caption/index.css
+++ b/src/components/Caption/index.css
@@ -33,6 +33,6 @@
   box-shadow: inset 0.25rem 0 0 var(--green);
   color: var(--green);
   font: 300 var(--type-0)/1.5rem system-ui;
-  margin-top: 0.5rem;
-  padding-left: 0.75rem;
+  margin-top: 0.75rem;
+  padding-left: 1.25rem;
 }
